force-app/main/default/objects/ROSA_Project_Task__mdt/ROSA_Project_Task__mdt.object-meta.xml
<CustomObject>
    <label>ROSA Project Task</label>
    <pluralLabel>ROSA Project Tasks</pluralLabel>
</CustomObject>