force-app/main/default/objects/ROSA_Project_Task__mdt/fields/Item_Order__c.field-meta.xml
<CustomField>
    <fullName>Item_Order__c</fullName>
    <label>Item Order</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>