force-app/main/default/objects/ROSA_Project_Task__mdt/fields/Item_Types__c.field-meta.xml
<CustomField>
    <fullName>Item_Types__c</fullName>
    <label>Item Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
                <default>true</default>
                <label>Task</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>