force-app/main/default/objects/ROSA_Project_Task__mdt/listViews/ROSA_Tasks.listView-meta.xml
<ListView>
    <fullName>ROSA_Tasks</fullName>
    <columns>Item_Order__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Item_Types__c</columns>
    <columns>Instructions__c</columns>
    <columns>Related_File_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>ROSA Tasks</label>
    <language>en_US</language>
</ListView>